--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
       </div>
 
       <mat-card-actions>
-        <button mat-raised-button (click)="addMusic()" color="primary">Add newgit music</button>
+        <button mat-raised-button (click)="addMusic()" color="primary">Add new music</button>
       </mat-card-actions>
     </mat-card>
     <mat-card *ngElse>
